# chrome-cookiejar

./: LICENSE  README.md  chrome.py  pyproject.toml  setup.cfg  setup.py  test_zhihu.py  tests.py  win32crypt.py
.github/workflows/: integration.yml
chrome_cookiejar/: __init__.py  decrypt.py  main.py  path.py  unix_crypt.py  win32crypt.py
