[metadata]
name = chrome-cookiejar
version = 0.1.0
author = Arnie97
author_email = arnie97@gmail.com
description = Python library for retrieving cookies from the Chrome browser
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_files = LICENSE
url = https://github.com/arnie97/chrome-cookiejar
project_urls =
    Bug Tracker = https://github.com/arnie97/chrome-cookiejar/issues
classifiers =
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.5
    License :: OSI Approved :: MIT License
	Operating System :: POSIX :: Linux
	Operating System :: MacOS
	Operating System :: Microsoft :: Windows
	Topic :: Internet :: WWW/HTTP :: Session
	Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
zip_safe = True
python_requires = >=3.5
install_requires =
    pycryptodome; os_name == "posix"
